@@ -11,6 +11,7 @@ SVN
 -bug#0001771: "index count changed" not implemented for query_unix_partitions.pl
               query_host_partitions.pl, query_cpu_partitions.pl, ss_host_cpu.php, ss_host_disk.php
 -bug#0001775: Tech Support page does not allow for no memory limit in PHP 
+-bug#0001776: Cacti Support for Multiple Simultaneous Databases Broken 
 
 0.8.7f
 -security: SQL injection and shell escaping issues reported by Bonsai Information Security (http://www.bonsai-sec.com)
